--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "name": "Vadim Ruban",
     "email": "vadim.ruban@carusto.com"
   },
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/datso/react-native-pjsip/issues"
   },
