--- a/android/build.gradle
+++ b/android/build.gradle
@@ -17,10 +17,12 @@ repositories {
 def DEFAULT_COMPILE_SDK_VERSION             = 23
 def DEFAULT_BUILD_TOOLS_VERSION             = "23.0.1"
 def DEFAULT_TARGET_SDK_VERSION              = 23
+def DEFAULT_NDK_VERSION                     = "21.0.6011959"
 
 android {
     compileSdkVersion rootProject.hasProperty('compileSdkVersion') ? rootProject.compileSdkVersion : DEFAULT_COMPILE_SDK_VERSION
     buildToolsVersion rootProject.hasProperty('buildToolsVersion') ? rootProject.buildToolsVersion : DEFAULT_BUILD_TOOLS_VERSION
+    ndkVersion DEFAULT_NDK_VERSION
 
     defaultConfig {
         minSdkVersion 16
