--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/datso/react-native-pjsip/issues"
+    "url": "https://github.com/aldiand/react-native-pjsip/issues"
   },
   "dependencies": {
     "events": "1.1.0"
@@ -27,9 +27,9 @@
     "jsdoc": "^3.5.5",
     "minami": "^1.2.3"
   },
-  "name": "react-native-pjsip",
+  "name": "@aldiand/react-native-pjsip",
   "description": "PJSIP module for React Native",
-  "homepage": "https://github.com/datso/react-native-pjsip",
+  "homepage": "https://github.com/aldiand/react-native-pjsip",
   "keywords": [
     "react-component",
     "react-native",
@@ -45,7 +45,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/datso/react-native-pjsip.git"
+    "url": "git+https://github.com/aldiand/react-native-pjsip.git"
   },
-  "version": "2.8.1"
+  "version": "2.8.2"
 }
